--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -9,6 +9,22 @@ body {
     font-size: 120%;
 }
 
+.inp{
+  outline:none;
+  -webkit-app-region: no-drag;
+  border: 2px solid #c7eaf8;
+  border-radius: 10px;
+  background-color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #c7eaf8;
+  padding: .2% .1%;
+  font-size: 17px;
+  clear:both;
+  width: 6%;
+  text-align: center;
+}
+
 .specCol{
     float: left;
     padding-right: 1%;
