--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -3,10 +3,44 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: #c7eaf8;
+  filter: none;
+
+}
+
+.blurred{
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
 }
 
 .spec{
     font-size: 120%;
+}
+
+option{
+  outline:none;
+  background-color: #062532;
+  color: #c7eaf8;
+  border:none;
+}
+
+select{
+  outline:none;
+  -webkit-app-region: no-drag;
+  border: 2px solid #c7eaf8;
+  border-radius: 10px;
+  background-color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #c7eaf8;
+  padding: .5% .1%;
+  font-size: 17px;
+  clear:both;
+  width: 35%;
+  height: 12%;
+  text-align: center;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-bottom: 3%;
 }
 
 .inp{
@@ -19,10 +53,14 @@ body {
   font-weight: bold;
   color: #c7eaf8;
   padding: .2% .1%;
-  font-size: 17px;
+  font-size: 120%;
   clear:both;
-  width: 70px;
+  width: 35%;
+  height: 10%;
   text-align: center;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-bottom: 3%;
 }
 
 .specCol{
@@ -41,6 +79,7 @@ body {
  
   border-bottom: 2px solid #c7eaf8;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .topnav a {
@@ -170,14 +209,21 @@ body {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  left: 37%;
+  top: 35%;
+  width: 25%; /* Full width */
+  height: 30%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: #062532; /* Black w/ opacity */
+  text-align: center;
+  
+  border: 4px solid rgba(0,0,0,.05);
+  border-radius: 7px;
+  filter: none;
+  -webkit-filter: none;
 }
+
 
 /* Modal Content/Box */
 .modal-content {
@@ -190,10 +236,15 @@ body {
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  -webkit-app-region: no-drag;
   float: right;
-  font-size: 28px;
-  font-weight: bold;
+  margin-top: 1%;
+  margin-right: 2%;
+  background-color: transparent;
+  color: red;
+  border-radius: 50%;
+  border: 7px solid rgb(255, 72, 72);
+  display: inline-block;
 }
 
 .close:hover,
@@ -240,3 +291,5 @@ body {
   from {top: -300px; opacity: 0}
   to {top: 0; opacity: 1}
 }
+
+
